# RemoteControllerAPI_Client

./: CMakeLists.txt  client  client.c  client.h  config.h  main.c  make.txt  rc_client
client.dSYM/Contents/Resources/DWARF/: client
common/: address_helper.c  helper.c  io_helper.c  io_helper.h
include/: client.h  config.h
include/networking/: authentication.h  client_info.h  conn_socket.h  connection.h  datagram_client.h  generic_client.h  service.h  stream_client.h
networking/: authentication.c  client_info.c  client_info.h  conn_socket.c  conn_socket.h  connection.c  connection.h  datagram_client.c  datagram_client.h  datagram_conn.c  datagram_conn.h  generic_client.c  generic_client.h  service.c  service.h  stream.c  stream.h  stream_client.c  stream_client.h  stream_conn.c  stream_conn.h
output/unix/lib/: librc_client.dylib  librc_client_shared.dylib
outputs/: cmake_install.cmake
outputs/debug/lib/: librc_client.dylib
outputs/lib/apple/: librc_client.dylib
rc_client.dSYM/Contents/: Info.plist
rc_client.dSYM/Contents/Resources/DWARF/: rc_client
src/: client.c  main.c
src/networking/: authentication.c  client_info.c  conn_socket.c  connection.c  datagram_client.c  generic_client.c  service.c  stream_client.c
test/: test_client.c  test_client.h  test_transfer.c  test_transfer.h  test_transfer_osx.c
